--- a/ElysiumApp/app/src/main/res/values/strings.xml
+++ b/ElysiumApp/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
 
     <string name="notification_channel_name">Music Channel</string>
     <string name="notification_channel_description">Shows the currently playing music</string>
+    <string name="song_name_placeholder">SONG NAME</string>
+    <string name="zero_time">00:00</string>
+    <string name="title_placeholder">Title</string>
+    <string name="playlist_title">Playlist Title</string>
+    <string name="_100_songs">100 Songs</string>
 </resources>
