--- a/ElysiumApp/app/src/main/res/values/strings.xml
+++ b/ElysiumApp/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="datetime">18-18-2018 18:00</string>
     <string name="comment">Comment</string>
     <string name="song_author_placeholder">Author</string>
+    <string name="no_comments">No comments</string>
 </resources>
